--- a/package.json
+++ b/package.json
@@ -10,8 +10,42 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.5.1",
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-camera-roll/camera-roll": "^6.0.0",
+    "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-picker/picker": "^2.5.1",
+    "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.9.14",
+    "@supabase/supabase-js": "^2.37.0",
+    "@types/redux": "^3.6.0",
+    "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
+    "lottie-react-native": "^6.3.1",
+    "moment-timezone": "^0.5.43",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-native": "0.72.5",
+    "react-native-autocomplete-dropdown": "^3.0.2",
+    "react-native-compressor": "^1.8.12",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.13.1",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-permissions": "^3.10.1",
+    "react-native-picker-select": "^8.1.0",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-safe-area-context": "^4.7.2",
+    "react-native-screens": "^3.25.0",
+    "react-native-static-safe-area-insets": "^2.2.0",
+    "react-native-svg": "^13.14.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-version-check": "^3.4.7",
+    "react-native-vision-camera": "^3.3.1",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "twrnc": "^3.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,6 +55,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-version-check": "^3.4.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
